--- a/src/pages/CustomizationPage.css
+++ b/src/pages/CustomizationPage.css
@@ -17,9 +17,14 @@
 
 .logo {
   width: 80px;
-  height: 80px;
+  height: auto;
+  max-height: 80px;
   margin-bottom: 24px;
   border-radius: 20px;
+  object-fit: contain;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .main-title {
@@ -193,9 +198,14 @@
 
 .loading-logo {
   width: 100px;
-  height: 100px;
+  height: auto;
+  max-height: 100px;
   margin-bottom: 32px;
   border-radius: 25px;
+  object-fit: contain;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .loading-spinner-large {
